@@ -18,6 +18,9 @@ Skada.windowdefaults = {
 	baraltcolor = {r = 0.45, g = 0.45, b = 0.8, a = 1},
 	barslocked=false,
 
+	classcolorbars = true,
+	classcolortext = false,
+	
 	title = {font="Accidental Presidency", fontsize=11,margin=0, texture="Round", bordertexture="None", borderthickness=2, color = {r=0,g=0,b=0,a=0.6}},
 	background = {margin=0, height=150, texture="None", bordertexture="None", borderthickness=0, color = {r=0,g=0,b=0.5,a=0.5}},
 
